--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="index.html">Simple</a>
                 </li>
                 <li>
-                    <a href="hex.html">Hex</a>
+                    <a href="./pages/hex.html">Hex</a>
                 </li>
             </ul>
         </div>
